--- a/src/main/resources/db/changelog/master.yaml
+++ b/src/main/resources/db/changelog/master.yaml
@@ -2,4 +2,6 @@ databaseChangeLog:
   - include:
       file: db/changelog/V1__baseline.yaml
   - include:
+      file: db/changelog/V2__flashcard_schema.yaml
+  - include:
       file: db/changelog/V2__testdata.yaml
