--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
 					<driver>org.postgresql.Driver</driver>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.1.2</version>
+			</plugin>
 		</plugins>
 	</build>
 
