feat(weightlifting): add 1RM strategy and overload-trend service

--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,9 @@
 			<version>2.1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>test</scope>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.6.1</version>
 		</dependency>
 	</dependencies>
 	<build>
