--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,12 @@
 name: CI
 on: [push, pull_request]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 17  # or 21 if you prefer
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Cache Maven
         uses: actions/cache@v4
@@ -17,5 +14,26 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
-      - name: Verify Build
-        run: ./mvnw -B verify
+      - name: Cache Testcontainers
+        uses: actions/cache@v4
+        with:
+          path: ~/.testcontainers
+          key: ${{ runner.os }}-testcontainers-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-testcontainers-
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+
+      - name: Verify Build & Coverage
+        run: ./mvnw -B clean verify
+
+      - name: Archive JaCoCo Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: target/site/jacoco/
