--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,25 @@
 			<artifactId>commons-math3</artifactId>
 			<version>3.6.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.19.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.cdimascio</groupId>
+			<artifactId>dotenv-java</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -165,17 +184,6 @@
 						</limits>
 					</rule>
 					</rules>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.liquibase</groupId>
-				<artifactId>liquibase-maven-plugin</artifactId>
-				<configuration>
-					<changeLogFile>src/main/resources/db/changelog/master.yaml</changeLogFile>
-					<url>jdbc:postgresql://localhost:5432/hobbyhub</url>
-					<username>hobbyuser</username>
-					<password>hobbysecret</password>
-					<driver>org.postgresql.Driver</driver>
 				</configuration>
 			</plugin>
 			<plugin>
