--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,9 @@ spring:
             client-secret: ${OAUTH_CLIENT_SECRET}
             scope: repo,read:user
 
+  main:
+    banner-mode: "off"
+
   # --- Liquibase ---
   liquibase:
     enabled: true
@@ -37,7 +40,3 @@ flyio:
 registry:
   username: ${REGISTRY_USERNAME}
   password: ${REGISTRY_PASSWORD}
-
-logging:
-  level:
-    org.springframework.security: DEBUG
