--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,21 @@ services:
     volumes:
       - db_data:/var/lib/postgresql/data
 
+  api:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    env_file:
+      - .env
+
+  prometheus:
+    image: prom/prometheus:latest
+    volumes:
+      - ./ops/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    ports:
+      - "9090:9090"
+
 volumes:
   db_data:
-  
