--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,20 @@
-name: CI
-on: [push, pull_request]
+name: CI-CD
+
+on:
+  pull_request:
+    branches: [ "**" ]
+  push:
+    branches: [ "**" ]
+
+env:
+  REGISTRY: ghcr.io/andremunay/hobbyhub-api
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
 
-    # These environment variables will be available during the entire job.
+  build-test:
+    runs-on: ubuntu-latest
+    
+
     env:
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
       POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
@@ -13,8 +22,6 @@ jobs:
       OAUTH_CLIENT_ID: ${{ secrets.OAUTH_CLIENT_ID }}
       OAUTH_CLIENT_SECRET: ${{ secrets.OAUTH_CLIENT_SECRET }}
       FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-      REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
-      REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
 
     steps:
       - name: Checkout repository
@@ -34,11 +41,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-testcontainers-
 
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: 21
 
       - name: Build & Run Tests (with coverage)
         run: ./mvnw -B clean verify
@@ -49,3 +56,34 @@ jobs:
         with:
           name: jacoco-report
           path: target/site/jacoco/
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}:pr-${{ github.event.pull_request.number }}
+            ${{ env.REGISTRY }}:${{ github.sha }}
+
+  deploy-prod:
+    if: github.event_name == 'push'
+    needs: build-test
+    runs-on: ubuntu-latest
+    environment: production
+    steps:
+      - uses: superfly/flyctl-actions@1.4
+        with:
+          args: >
+            deploy
+            --remote-only
+            --image ${{ env.REGISTRY }}:${{ github.sha }}
+            --app hobbyhub-api
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
