--- a/fly.toml
+++ b/fly.toml
@@ -6,7 +6,11 @@ primary_region = "sea"
 
 [env]
   PORT = "8080"
-
+  
+[registry]
+  username = "REGISTRY_AUTH_USER"
+  password = "REGISTRY_AUTH_TOKEN"
+  
 [[services]]
   internal_port = 8080
   protocol = "tcp"
