--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,3 +87,5 @@ jobs:
             --app hobbyhub-api
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          REGISTRY_AUTH_USER: ${{ secrets.REGISTRY_AUTH_USER }}
+          REGISTRY_AUTH_TOKEN: ${{ secrets.REGISTRY_AUTH_TOKEN }}
