--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,29 +61,33 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.GHCR_USERNAME }}
+          password: ${{ secrets.GHCR_TOKEN }}
 
-      - name: Build & push Docker image
+      - name: Build & push branch image
         uses: docker/build-push-action@v5
         with:
           push: true
           tags: |
-            ${{ env.REGISTRY }}:pr-${{ github.event.pull_request.number }}
-            ${{ env.REGISTRY }}:${{ github.sha }}
+            ${{ env.REGISTRY }}:latest
+            ${{ env.REGISTRY }}:${{ github.ref_name }}
 
   deploy-prod:
-    if: github.event_name == 'push'
     needs: build-test
     runs-on: ubuntu-latest
     environment: production
     steps:
-      - uses: superfly/flyctl-actions@1.4
+      - name: Checkout repo
+        uses: actions/checkout@v4      
+          
+      - name: Deploy to Fly.io
+        uses: superfly/flyctl-actions@1.4
         with:
           args: >
             deploy
-            --remote-only
-            --image ${{ env.REGISTRY }}:${{ github.sha }}
+            --image ${{ env.REGISTRY }}:latest
             --app hobbyhub-api
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          REGISTRY_AUTH_USERNAME:  ${{ secrets.GHCR_USERNAME }}
+          REGISTRY_AUTH_TOKEN:     ${{ secrets.GHCR_TOKEN }}
