--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,10 @@ primary_region = "sea"
 [env]
   PORT = "8080"
 
+[registry]
+  username = "REGISTRY_AUTH_USERNAME"
+  password = "REGISTRY_AUTH_TOKEN"
+
 [[services]]
   internal_port = 8080
   protocol = "tcp"
