--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ HELP.md
 .factorypath
 .springBeans
 .sts4-cache
+/docs/fly-apps-commands.md
+/docs/fly-postgres-credentials
 
 # Spring Boot secrets/config
 
