--- a/fly.toml
+++ b/fly.toml
@@ -7,9 +7,10 @@ primary_region = "sea"
 [env]
   PORT = "8080"
 
-[registry]
-  username = "REGISTRY_AUTH_USERNAME"
-  password = "REGISTRY_AUTH_TOKEN"
+[vm]
+  memory = 1024
+  cpu_kind =  "shared"
+  cpus = 1
 
 [[services]]
   internal_port = 8080
@@ -27,3 +28,11 @@ primary_region = "sea"
     type = "connections"
     soft_limit = 1000
     hard_limit = 2000
+
+  [[services.checks]]
+    type = "http"
+    interval = "10s"
+    timeout = "2s"
+    method = "GET"
+    path = "/actuator/health"
+    protocol = "http"
