--- a/ops/prometheus.yml
+++ b/ops/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
   - job_name: 'hobbyhub-api'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: ['api:8080']
+      - targets: ['hobbyhub-api.internal:8080']
