--- a/src/main/resources/application-fly.yaml
+++ b/src/main/resources/application-fly.yaml
@@ -28,6 +28,9 @@ spring:
     url: ${JDBC_DATABASE_URL}
     driver-class-name: org.postgresql.Driver
 
+  lifecycle:
+    timeout-per-shutdown-phase: 30s
+
 server:
   address: 0.0.0.0
   port: 8080
