--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -30,6 +30,9 @@ spring:
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
+  lifecycle:
+    timeout-per-shutdown-phase: 30s
+
 server:
   address: 0.0.0.0
   port: 8080
