--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,13 @@
 name: CI-CD
 
 on:
-  pull_request:
-    branches: [ "*" ]
   push:
-    branches: [ "*" ]
+    branches:
+      - '**'
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    types: [closed]
 
 env:
   REGISTRY: ghcr.io/andremunay/hobbyhub-api
@@ -12,6 +15,7 @@ env:
 jobs:
 
   build-test:
+    if: github.ref != 'refs/heads/main'
     runs-on: ubuntu-latest
 
     # only what the tests & Sonar need
@@ -96,7 +100,6 @@ jobs:
 
   deploy-prod:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    needs: build-test
     runs-on: ubuntu-latest
     environment: production
 
