--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -36,6 +36,10 @@ spring:
 server:
   address: 0.0.0.0
   port: 8080
+  servlet:
+    session:
+      cookie:
+        same-site: Lax
 
 # --- Secrets & Configuration ---
 github:
