add name normalization class, db seed data, refactor dto classes, and fix tests for more coverage

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -21,6 +21,7 @@ spring:
 
   # --- Liquibase ---
   liquibase:
+    contexts: local
     enabled: true
     change-log: classpath:db/changelog/master.yaml
 
