--- a/src/main/resources/db/changelog/V1__baseline.yaml
+++ b/src/main/resources/db/changelog/V1__baseline.yaml
@@ -47,6 +47,8 @@ databaseChangeLog:
               - column:
                   name: name
                   type: varchar(100)
+                  constraints:
+                    unique: true
               - column:
                   name: sets
                   type: int
