--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,9 @@ jobs:
           distribution: temurin
           java-version: 21
 
+      - name: Apply code formatting (Spotless)
+        run: ./mvnw spotless:apply
+
       - name: Build & Run Tests (with coverage)
         run: ./mvnw -B clean verify
 
