fix sonarcloud properties and suppress circular dependency in weightlifting domain

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          # fetch full history so sonar can blame each line
+          fetch-depth: 0
 
       - name: Cache Maven
         uses: actions/cache@v4
