fix-application-fly.yaml to log security DEBUG and add forward-headers-strategy: native

--- a/src/main/resources/application-fly.yaml
+++ b/src/main/resources/application-fly.yaml
@@ -34,6 +34,7 @@ spring:
 server:
   address: 0.0.0.0
   port: 8080
+  forward-headers-strategy: native
   servlet:
     session:
       cookie:
@@ -87,6 +88,8 @@ management:
 logging:
   level:
     root: INFO
+    org.springframework.security: DEBUG
+    org.springframework.security.oauth2: DEBUG
 
 springdoc:
   swagger-ui:
