--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ HELP.md
 .springBeans
 .sts4-cache
 /docs/fly-apps-commands.md
-/docs/fly-postgres-credentials
+/docs/fly-postgres-credentials.txt
 
 # Spring Boot secrets/config
 
