--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -103,7 +103,9 @@ jobs:
 
   deploy-prod:
     # Only runs on push to main branch
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: | 
+      (github.ref == 'refs/heads/main' && github.event_name == 'push') || (startsWith(github.ref, 'refs/tags/v') && github.event_name == 'push')
+
     runs-on: ubuntu-latest
     environment: production
 
